# genius-square

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: solutions.csv
notebooks/: demo-python.ipynb  demo-rust.ipynb  demo.ipynb  literally-every-solution.ipynb
python/genius/: __init__.py
python/genius_square/: __init__.py  __main__.py  _cli.py  dice.py  pieces.py  printer.py  solve.py  state.py
python/genius_square/experimental/: __init__.py  _solve.pyi  solver.py
python/genius_square/solver/: __init__.py  solve.py
python/tests/: test_all.py
rust/: Cargo.toml
src/: counter.rs  foo.rs  lib.rs  main.rs  pieces.rs  solver.rs  state.rs
src/bar/: baz.rs  mod.rs
src/genius/: __init__.py  genius.pyi
tests/: test_all.py  test_demo.py  test_solver.py
tests/experimental/: test_bindings.py  test_demo.py  test_solver.py
