[project]
name = "genius-square"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Cross", email = "AlexJCross90@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
genius-square = "genius_square:_cli.main"

[tool.maturin]
module-name = "genius_square.solver._solve"
python-packages = ["genius_square"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["pytest>=8.3.4"]
