[project]
name = "genius-square"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Cross", email = "AlexJCross90@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["click>=8.1.8", "tqdm>=4.67.1"]

[project.scripts]
genius-square = "genius_square:_cli.gs_cli"

[tool.maturin]
module-name = "genius_square.experimental._solve"
python-packages = ["genius_square"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["pytest>=8.3.4"]
notebook = ["ipykernel>=6.29.5", "polars>=1.18.0", "seaborn>=0.13.2"]

[tool.ruff]
line-length = 110
